[package]
name = "zk-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version = "0.52.1", features = ['tokio', "dns", "macros", "noise", "ping", "tcp", "websocket", "yamux", "gossipsub", "mdns"]}
libp2p-quic = { features = ["tokio"] }

tokio = { version = "1", features = ["full"] }

serde = {version = "1.0.171", features = ['derive']}
bellman = "0.14.0"
serde_json = "1.0.103"
curve25519-dalek = "3"
rand = "0.8.4"
bls12_381 = {version = "0.8.0"}
base64 = "0.21.2"
regex = "1.9.1"
